--- a/_publications/2017-5-14-sigmod.md
+++ b/_publications/2017-5-14-sigmod.md
@@ -1,10 +1,10 @@
 ---
 title: "CDB: Optimizing Queries with Crowd-Based Selections and Joins"
 collection: publications
-permalink: /publication/2019-4-23-dasfaa
-date: 2019-4-23
+permalink: /publication/2017-5-14-sigmod
+date: 2017-5-14
 venue: 'DASFAA'
-citation: 'G. Li, C. Chai, J. Fan, X. Weng, J. Li, Y. Zheng, Y. Li, X Yu, X Zhang, <b>H. Yuan</b>, etc. &quot;MathGraph: A Knowledge Graph for Automatically Solving Mathematical Exercises.&quot; In <i>DASFAA</i>, 2019. <a href="https://yuanhaitao.github.io/files/sigmod2017.pdf">pdf</a>'
+citation: 'G. Li, C. Chai, J. Fan, X. Weng, J. Li, Y. Zheng, Y. Li, X Yu, X Zhang, <b>H. Yuan</b>, etc. &quot;MathGraph: A Knowledge Graph for Automatically Solving Mathematical Exercises.&quot; In <i>SIGMOD</i>, 2017. <a href="https://yuanhaitao.github.io/files/sigmod2017.pdf">pdf</a>'
 ---
 
 Abstract
