--- a/_publications/2-2019-4-23-dasfaa.md
+++ b/_publications/2-2019-4-23-dasfaa.md
@@ -9,8 +9,18 @@ citation: 'T. Zhao, Y. Huang, S. Yang, Y. Luo, J. Feng, Y. Wang, <b>H. Yuan</b>,
 
 Abstract
 ======
-   Knowledge graphs are widely applied in many applications. Automatically solving mathematical exercises is also an interesting task which can be enhanced by knowledge reasoning. In this paper, we design MathGraph, a knowledge graph aiming to solve high school mathemati- cal exercises. Since it requires fine-grained mathematical derivation and calculation of different mathematical objects, the design of MathGraph has major differences from existing knowledge graphs. MathGraph sup- ports massive kinds of mathematical objects, operations, and constraints which may be involved in exercises. Furthermore, we propose an algo- rithm to align a semantically parsed exercise to MathGraph and fig- ure out the answer automatically. Extensive experiments on real-world datasets verify the effectiveness of MathGraph.    
+   Knowledge graphs are widely applied in many applications. 
+   Automatically solving mathematical exercises is also an interesting task which can be enhanced by knowledge reasoning. 
+   In this paper, we design MathGraph, a knowledge graph aiming to solve high school mathematical exercises. 
+   Since it requires fine-grained mathematical derivation and calculation of different mathematical objects, 
+   the design of MathGraph has major differences from existing knowledge graphs. 
+   MathGraph supports massive kinds of mathematical objects, operations, and constraints which may be involved in exercises. 
+   Furthermore, we propose an algorithm to align a semantically parsed exercise to MathGraph and figure out the answer automatically. 
+   Extensive experiments on real-world datasets verify the effectiveness of MathGraph.    
 
 Conclusion
 ======
-In this paper, we proposed MathGraph, a knowledge graph for automatically solving mathematical exercises. MathGraph is specially designed to represent different mathematical objects, operations and constraints. Given an exercise, we can use the proposed method to solve it with the help of MathGraph and a pre- built semantic parser. Experimental study on four real-world datasets demon- strates the accuracy of our method.
+In this paper, we proposed MathGraph, a knowledge graph for automatically solving mathematical exercises. 
+MathGraph is specially designed to represent different mathematical objects, operations and constraints. 
+Given an exercise, we can use the proposed method to solve it with the help of MathGraph and a prebuilt semantic parser. 
+Experimental study on four real-world datasets demonstrates the accuracy of our method.
